--- a/resultsTabelle.html
+++ b/resultsTabelle.html
@@ -74,7 +74,7 @@
         <th>Artikelname</th>
         <th>Längen</th>
         <th>Größen</th>
-        <th>Vollzeitmitarbeiter</th>
+        <th>Mitarbeiter</th>
         <th>Tauschquote</th>
         <th>Lieferrhythmus</th>
         <th>Ausstattungsmenge</th>
