--- a/resultsTabelle.html
+++ b/resultsTabelle.html
@@ -89,6 +89,8 @@
 <div>
     <a href="konfiguratorNew.html" class="backButton">Zurück</a>
     <button class="downloadButton" onclick="downloadExcel()">Tabelle als Excel herunterladen</button>
+    <a href="systemkonfigurator.html" class="backButton">Zum Systemkonfigurator</a>
+
 </div>
 
 <script>
