--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </head>
 <body>
 <h1>Konfigurator</h1>
-<button onclick="window.location.href='konfiguratorNew.html'">Konfigurieren</button>
+<button onclick="window.location.href='konfigurator.html'">Konfigurieren</button>
 <button onclick="window.location.href='systemkonfigurator.html'">Systemkonfigurator</button>
 </body>
 </html>
